packages/build/tests/error/fixtures/fail_build/plugin.js
export const onPreBuild = function ({
  utils: {
    build: { failBuild },
  },
}) {
  failBuild('test')
}
